--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,11 @@
       <scope>test</scope>
 	</dependency>
   </dependencies>
+  <distributionManagement>
+   <repository>
+     <id>github</id>
+     <name>GitHub vineeth-pradhan Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/vineeth-pradhan/binarytreegenerator-java</url>
+   </repository>
+  </distributionManagement>
 </project>
